--- a/index.html
+++ b/index.html
@@ -86,6 +86,15 @@
               </a>
             </li>
 
+            <li class="list-inline-item">
+              <a href="https://www.xing.com/profile/Seifeddine_BENSALAH">
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-xing fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+            </li>
+
             <style>
               .inline-div {
                   display: inline-block;
