--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               <a href="https://www.xing.com/profile/Seifeddine_BENSALAH">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-xing fa-stack-1x fa-inverse"></i>
+                  <i class="fa fa-xing fa-stack-1x fa-inverse" title="Your Tooltip Message"></i>
                 </span>
               </a>
             </li>
@@ -101,14 +101,7 @@
               }
           </style>
 
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
+           
             <li class="list-inline-item">
               <a href="#">
                 <span class="fa-stack fa-lg" id="downloadButton">
