change About and Skills sections

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <a href="https://www.linkedin.com/in/seifeddinebensalah/">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+                <i class="fa fa-linkedin fa-stack-1x fa-inverse" title="My Linkedin Account"></i>
               </span>
             </a>
           </li>
@@ -101,7 +101,7 @@
             <a href="https://www.xing.com/profile/Seifeddine_BENSALAH">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-xing fa-stack-1x fa-inverse" title="Your Tooltip Message"></i>
+                <i class="fa fa-xing fa-stack-1x fa-inverse" title="My Xing Account"></i>
               </span>
             </a>
           </li>
@@ -114,10 +114,10 @@
 
 
           <li class="list-inline-item">
-            <a href="#">
-              <span class="fa-stack fa-lg" id="downloadButton">
+            <a href="https://github.com/SeifeddineBS">
+              <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-download fa-stack-1x fa-inverse"></i>
+                <i class="fa fa-github fa-stack-1x fa-inverse" title="My Github Account"></i>
               </span>
             </a>
           </li>
@@ -272,128 +272,96 @@
         <div class="subheading mb-3">Programming Languages &amp; Tools</div>
         <ul class="list-inline list-icons">
           <li class="list-inline-item">
-            <i class="devicons devicons-html5"></i>
+              <i class="devicons devicons-html5" title="HTML"></i>
           </li>
           <li class="list-inline-item">
-            <i class="devicons devicons-css3"></i>
+              <i class="devicons devicons-css3" title="CSS"></i>
           </li>
           <li class="list-inline-item">
-            <i class="devicons devicons-javascript"></i>
+              <i class="devicons devicons-javascript" title="JavaScript"></i>
           </li>
           <li class="list-inline-item">
-
-
-            <i class="devicon-typescript-plain"></i>
+              <i class="devicon-typescript-plain" title="TypeScript"></i>
           </li>
           <li class="list-inline-item">
-            <i class="devicons devicons-jquery"></i>
+              <i class="devicons devicons-jquery" title="jQuery"></i>
           </li>
           <li class="list-inline-item">
-            <i class="devicons devicons-sass"></i>
+              <i class="devicons devicons-sass" title="Sass"></i>
           </li>
           <li class="list-inline-item">
-
-            <i class="devicon-bootstrap-plain-wordmark"></i>
+              <i class="devicon-bootstrap-plain-wordmark" title="Bootstrap"></i>
           </li>
           <li class="list-inline-item">
-            <i class="devicons devicons-nodejs"></i>
+              <i class="devicons devicons-nodejs" title="Node.js"></i>
           </li>
           <li class="list-inline-item">
-
-            <i class="devicon-express-original-wordmark"></i>
-          </li>
-
-
-          <li class="list-inline-item">
-
-            <i class="devicon-angularjs-plain"></i>
+              <i class="devicon-express-original-wordmark" title="Express.js"></i>
           </li>
           <li class="list-inline-item">
-
-            <i class="devicon-react-original-wordmark"></i>
-          </li>
-
-          <li class="list-inline-item">
-
-
-            <i class="devicon-vuejs-plain"></i>
-          </li>
-
-          <li class="list-inline-item">
-            <i class="devicons devicons-npm"></i>
+              <i class="devicon-angularjs-plain" title="AngularJS"></i>
           </li>
           <li class="list-inline-item">
-
-            <i class="devicon-c-plain"></i>
+              <i class="devicon-react-original-wordmark" title="React"></i>
           </li>
           <li class="list-inline-item">
-
-            <i class="devicon-cplusplus-plain"></i>
+              <i class="devicon-vuejs-plain" title="Vue.js"></i>
           </li>
           <li class="list-inline-item">
-
-            <i class="devicon-csharp-plain"></i>
-          </li>
-
-          <li class="list-inline-item">
-
-            <i class="devicon-spring-plain-wordmark"></i>
+              <i class="devicons devicons-npm" title="npm"></i>
           </li>
           <li class="list-inline-item">
-            <i class="devicons devicons-python"></i>
+              <i class="devicon-c-plain" title="C"></i>
           </li>
           <li class="list-inline-item">
-
-            <i class="devicon-django-plain-wordmark"></i>
-          </li>
-
-          <li class="list-inline-item">
-
-            <i class="devicon-symfony-original-wordmark"></i>
+              <i class="devicon-cplusplus-plain" title="C++"></i>
           </li>
           <li class="list-inline-item">
-
-            <i class="devicon-laravel-plain-wordmark"></i>
+              <i class="devicon-csharp-plain" title="C#"></i>
           </li>
           <li class="list-inline-item">
-
-            <i class="devicon-dot-net-plain-wordmark"></i>
+              <i class="devicon-spring-plain-wordmark" title="Spring"></i>
           </li>
           <li class="list-inline-item">
-            <i class="devicon-amazonwebservices-plain-wordmark"></i>
-          </li>
-
-          <li class="list-inline-item">
-            <i class="devicon-docker-plain"></i>
-          </li>
-
-          <li class="list-inline-item">
-
-            <i class="devicon-kubernetes-plain"></i>
+              <i class="devicons devicons-python" title="Python"></i>
           </li>
           <li class="list-inline-item">
-
-            <i class="devicon-mongodb-plain-wordmark"></i>
+              <i class="devicon-django-plain-wordmark" title="Django"></i>
           </li>
           <li class="list-inline-item">
-
-            <i class="devicon-oracle-original"></i>
+              <i class="devicon-symfony-original-wordmark" title="Symfony"></i>
           </li>
           <li class="list-inline-item">
-
-            <i class="devicon-mysql-plain-wordmark"></i>
-
+              <i class="devicon-laravel-plain-wordmark" title="Laravel"></i>
           </li>
           <li class="list-inline-item">
-            <i class="devicon-postgresql-plain-wordmark"></i>
-
+              <i class="devicon-dot-net-plain-wordmark" title=".NET"></i>
           </li>
           <li class="list-inline-item">
-
-            <i class="devicon-git-plain-wordmark"></i>
+              <i class="devicons devicons-amazonwebservices-plain-wordmark" title="AWS"></i>
           </li>
-
-        </ul>
+          <li class="list-inline-item">
+              <i class="devicon-docker-plain" title="Docker"></i>
+          </li>
+          <li class="list-inline-item">
+              <i class="devicon-kubernetes-plain" title="Kubernetes"></i>
+          </li>
+          <li class="list-inline-item">
+              <i class="devicon-mongodb-plain-wordmark" title="MongoDB"></i>
+          </li>
+          <li class="list-inline-item">
+              <i class="devicon-oracle-original" title="Oracle"></i>
+          </li>
+          <li class="list-inline-item">
+              <i class="devicon-mysql-plain-wordmark" title="MySQL"></i>
+          </li>
+          <li class="list-inline-item">
+              <i class="devicon-postgresql-plain-wordmark" title="PostgreSQL"></i>
+          </li>
+          <li class="list-inline-item">
+              <i class="devicon-git-plain-wordmark" title="Git"></i>
+          </li>
+      </ul>
 
         <div class="subheading mb-3">Qualities</div>
         <ul class="fa-ul mb-0">
