Change About section

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <p class="mb-5">I am a dedicated Full Stack Engineer with a solid foundation in computer science and web
           development. With international experience and a diverse skill set, I am passionate about tackling complex
           challenges and contributing to innovative solutions. My education has equipped me with proficiency in
-          programming languages like Angular, React, and Node.js, and I have honed my technical skills through diverse
+          several programming languages, and I have honed my technical skills through diverse
           projects and teamwork. As an exchange student in Germany, I gained a global perspective on computer science
           and strengthened my problem-solving abilities during my last experiences. Recently graduating and eager to
           transition into a full-time role, I remain committed to continuous learning and staying at the forefront of
