--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <h1 class="mb-0">Seifeddine
           <span class="text-primary">Ben Salah</span>
         </h1>
-        <div class="subheading mb-5">Klingenthaler weg 12 · Erfurt,99085 · +49 152 26610465
+        <div class="subheading mb-5">Wettersteinstr.1 d, 86899 Landsberg, Germany · +49 152 26610465
           <a href="seifeddine.bensalah@gmail.com">seifeddine.bensalah@gmail.com</a>
         </div>
         <p class="mb-5">I am a dedicated Full Stack Engineer with a solid foundation in computer science and web
